--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -1,32 +1,44 @@
 {% extends "base.html" %}
-
 {% block body %}
-<div class="calendar">
-<form method="post" class="form-horizontal" role="form">
-    <div class="form-group">
-        <label for="name" class="col-sm-3 control-label">Trip name</label>
-        <div class="col-sm-9">
-            <input type="text" name="name" class="form-control" placeholder="Type title of the trip">
-        </div>
+
+<div class="row">
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
+        <h2>What days are you traveling?</h2>
+        <p>
+            If you're planning on hosting some visitors from out of town, this
+            can just be a good guess about their availability.
+        </p>
+        <p>
+            If you're only visiting San Franicsco, don't worry.  We won't tell
+            anyone what you're planning.
+        </p>
     </div>
-    <div class="form-group">
-        <label for="start_date" class="col-sm-3 control-label">Starts on</label>
-        <div class="col-sm-9">
-            <input type="date" name="start_date" class="form-control"/>
-        </div>
+    <div class="calendar col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
+        <form method="post" class="form-horizontal" role="form">
+            <div class="row form-group">
+                <label for="name" class="col-sm-3 control-label">Trip name</label>
+                <div class="col-sm-9">
+                    <input type="text" name="name" class="form-control" placeholder="Type title of the trip">
+                </div>
+            </div>
+            <div class="row form-group">
+                <label for="start_date" class="col-sm-3 control-label">Starts on</label>
+                <div class="col-sm-9">
+                    <input type="date" name="start_date" class="form-control"/>
+                </div>
+            </div>
+            <div class="row form-group">
+                <label for="end_date" class="col-sm-3 control-label">Ends on</label>
+                <div class="col-sm-9">
+                    <input type="date" name="end_date" class="form-control"/>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-sm-offset-5 col-sm-7">
+                    <button type="submit" class="btn btn-default">Create this plan</button>
+                </div>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="end_date" class="col-sm-3 control-label">Ends on</label>
-        <div class="col-sm-9">
-            <input type="date" name="end_date" class="form-control"/>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <div class="col-sm-offset-5 col-sm-7">
-            <button type="submit" class="btn btn-default">Create this plan</button>
-        </div>
-    </div>
-</form>
 </div>
 {% endblock %}
