--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>{{plan.name}}</h1>
-    <h4 class="subtitle">Categories for: {{timeslots[order]}}</h4>
-<div class="row categories_together">
-    {% for category in categories %}
-     <div class="col-md-4">
-       <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="btn btn-default a-10am separate-button turn_green">
-            <div class="category_name">{{category.name}}<br><img src="/static/icons/{{category.symbol_url}}"></div></a>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h2>{{plan.name}}</h2>
+        <h3>Categories for: {{timeslots[order]}}</h3>
+        <div class="row">
+            {% for category in categories %}
+                <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="category-button turn_green col-xs-4">
+                    <h3>{{category.name}}</h3>
+                    <img src="/static/icons/{{category.symbol_url}}">
+                </a>
+            {% endfor %}
+        </div>
     </div>
-    {% endfor %}
 </div>
 {% endblock %}
