--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="simple-sf-collapse">
                     <ul class="nav navbar-nav navbar-left">
-                        <li><a href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About me</a></li>
+                        <li><a href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{{url_for("plans")}}">My plans</a></li>
