--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -9,8 +9,8 @@
             can just be a good guess about their availability.
         </p>
         <p>
-            If you're only visiting San Franicsco, don't worry.  We won't tell
-            anyone what you're planning.
+            If you're only visiting San Francisco, don't worry.  We won't tell
+            anyone what you're planning:)
         </p>
     </div>
     <div class="calendar col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
@@ -18,7 +18,7 @@
             <div class="row form-group">
                 <label for="name" class="col-sm-3 control-label">Trip name</label>
                 <div class="col-sm-9">
-                    <input type="text" name="name" class="form-control" placeholder="Type title of the trip">
+                    <input type="text" name="name" class="form-control" placeholder="Type title of your trip">
                 </div>
             </div>
             <div class="row form-group">
@@ -35,7 +35,7 @@
             </div>
             <div class="row form-group">
                 <div class="col-sm-offset-5 col-sm-7">
-                    <button type="submit" class="btn btn-default">Create this plan</button>
+                    <button type="submit" class="btn btn-default create-plan">Create this plan</button>
                 </div>
             </div>
         </form>
