--- a/templates/activities.html
+++ b/templates/activities.html
@@ -14,7 +14,7 @@
         <a href="{{activity.website_url}}" target="_blank" class="lead-title">{{activity.title}}</a>
         <button type="submit" class="btn btn-success add-button"><span class="glyphicon glyphicon-time"></span> Add</button>
     </form>
-    <p>{{activity.description}}</p>
+    <p class="description">{{activity.description}}</p>
   </div>
 </div>
 {% endfor %}
