--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,13 +2,15 @@
 {% block body %}
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <h2>{{plan.name}}</h2>
-        <h3>Categories for: {{timeslots[order]}}</h3>
+        <div class="brand-name">
+                <h1>{{plan.name}}</h1>
+        </div>
+        <div class="categories"><h3>Categories for: {{timeslots[order]}}</h3></div>
         <div class="row">
             {% for category in categories %}
                 <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="category-button turn_green col-xs-4">
                     <h3>{{category.name}}</h3>
-                    <img src="/static/icons/{{category.symbol_url}}">
+                    <div class="category-image"><img src="/static/icons/{{category.symbol_url}}"></div>
                 </a>
             {% endfor %}
         </div>
