--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -3,12 +3,12 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-        <h2>What days are you traveling?</h2>
-        <p>
+        <h2 >What days are you traveling?</h2>
+        <p class="description">
             If you're planning on hosting some visitors from out of town, this
             can just be a good guess about their availability.
         </p>
-        <p>
+        <p class="description">
             If you're only visiting San Francisco, don't worry.  We won't tell
             anyone what you're planning:)
         </p>
