--- a/templates/activities.html
+++ b/templates/activities.html
@@ -11,7 +11,7 @@
   <div class="col-md-9 body">
     <form method="POST">
         <input type="hidden" name="activity_id" value="{{activity.id}}"/>
-        <a href="{{activity.website_url}}" target="_blank" class="lead-title">{{activity.title}}</a>
+        <div class="lead-dv"><a href="{{activity.website_url}}" target="_blank" class="lead-title">{{activity.title}}</a></div>
         <button type="submit" class="btn btn-success add-button"><span class="glyphicon glyphicon-time"></span> Add</button>
     </form>
     <p class="description">{{activity.description}}</p>
