--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-        <h2 >What days are you traveling?</h2>
+        <h2 class="days-travel">What days are you traveling?</h2>
         <p class="description">
             If you're planning on hosting some visitors from out of town, this
             can just be a good guess about their availability.
