--- a/templates/base.html
+++ b/templates/base.html
@@ -28,15 +28,12 @@
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="http://www.linkedin.com/in/malgorzatamigdal/en" target="_blank">About</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right user-bar"
+                       style="display: {% if current_user.is_authenticated() %} block {% else %} none {% endif %}">
                         <li><a href="{{url_for("plans")}}">My plans</a></li>
                         <li><a href="{{url_for("new_plan")}}">New plan</a></li>
                         <li><span id="fb-face"></span></li>
-                        {% if current_user.is_authenticated() %}
-                            <li><a href="{{url_for("logout")}}">Logout</a></li>
-                        {% else %}
-                            <li><a href="{{url_for("login")}}">Login</a></li>
-                        {% endif %}
+                        <li><a href="{{url_for("logout")}}">Logout</a></li>
                     </ul>
                 {% for message in get_flashed_messages() %}
                 <div class="alert alert-info">
