Secure fb integration

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                         <li><a href="{{url_for("plans")}}">My plans</a></li>
                         <li><a href="{{url_for("new_plan")}}">New plan</a></li>
                         <li><span id="fb-face"></span></li>
-                        <li><a href="{{url_for("logout")}}">Logout</a></li>
+                        <li><a class="logout" href="{{url_for("logout")}}">Logout</a></li>
                     </ul>
                 {% for message in get_flashed_messages() %}
                 <div class="alert alert-info">
