--- a/templates/fb.html
+++ b/templates/fb.html
@@ -55,7 +55,7 @@
   // This testAPI() function is only called in those cases. 
   function showFace() {
     console.log('Welcome!  Fetching your information.... ');
-    $(".user-bar").show()
+    $(".user-bar").show();
     FB.api('/me?fields=picture,name', function(response) {
       console.log('Good to see you, ' + response.name + '.');
       $("#fb-face").html("<img src=\"" + response.picture.data.url + "\" />" + response.name);
