Unify FB config

--- a/templates/fb.html
+++ b/templates/fb.html
@@ -3,8 +3,8 @@
 <script>
   window.fbAsyncInit = function() {
   FB.init({
-    appId      : '445104965594740',
-    channelUrl : '//localhost:5000/static/channel.html',
+    appId      : '{{FB_APP_ID}}',
+    channelUrl : '//{{FB_DOMAIN}}/static/channel.html',
     status     : true, // check login status
     cookie     : true, // enable cookies to allow the server to access the session
     xfbml      : true  // parse XFBML
