--- a/templates/fb.html
+++ b/templates/fb.html
@@ -56,6 +56,7 @@
   function showFace() {
     console.log('Welcome!  Fetching your information.... ');
     $(".user-bar").show();
+    $(".fb-connect").hide();
     FB.api('/me?fields=picture,name', function(response) {
       console.log('Good to see you, ' + response.name + '.');
       $("#fb-face").html("<img src=\"" + response.picture.data.url + "\" />" + response.name);
