--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -40,5 +40,12 @@
             </div>
         </form>
     </div>
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8 fb-connect">
+        <h2 class="days-travel">Already got a plan?</h2>
+        <p class="description">
+            Access it by logging in via Facebook.
+        </p>
+        <fb:login-button show-faces="false" width="200" max-rows="1"></fb:login-button>
+    </div>
 </div>
 {% endblock %}
