--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,12 +3,12 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <div class="brand-name">
-                <h1>{{plan.name}}</h1>
+            <h1>{{plan.name}}</h1>
         </div>
         <div class="categories"><h3>Categories for: {{timeslots[order]}}</h3></div>
         <div class="row">
             {% for category in categories %}
-                <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="category-button turn_green col-md-4 col-xs-12">
+                <a href="{{url_for("activities_for_timeslot", plan_id=plan.id, day=day, order=order,category_id=category.id)}}" class="category-button turn_green col-md-4 col-xs-12x">
                     <h3>{{category.name}}</h3>
                     <div class="category-image"><img src="/static/icons/{{category.symbol_url}}"></div>
                 </a>
@@ -17,3 +17,4 @@
     </div>
 </div>
 {% endblock %}
+
