Fixing background in categories

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,9 @@ h2, h3,
     border-radius: 8px;
 }
 
+.turn_green {
+    display: block;
+}
 
 .mouse_down {
     background-color: #5CA82A !important;
