--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
         <div class="brand-name">
             <h1>{{plan.name}}</h1>
         </div>
