--- a/templates/new_plan.html
+++ b/templates/new_plan.html
@@ -5,12 +5,7 @@
     <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
         <h2 class="days-travel">What days are you traveling?</h2>
         <p class="description">
-            If you're planning on hosting some visitors from out of town, this
-            can just be a good guess about their availability.
-        </p>
-        <p class="description">
-            If you're only visiting San Francisco, don't worry.  We won't tell
-            anyone what you're planning:)
+            Choose days which you plan to spend in San Francisco.
         </p>
     </div>
     <div class="calendar col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
@@ -18,7 +13,7 @@
             <div class="row form-group">
                 <label for="name" class="col-sm-3 control-label">Trip name</label>
                 <div class="col-sm-9">
-                    <input type="text" name="name" class="form-control" placeholder="Type title of your trip">
+                    <input type="text" name="name" class="form-control" placeholder="My trip to San Francisco">
                 </div>
             </div>
             <div class="row form-group">
