--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,15 +204,18 @@ body.index {
     background-size: cover;
 }
 
+body.plans {
+    background: url("/static/background/city_in_grey.jpg") no-repeat center center fixed; 
+    background-size: cover;
+}
+
+
 @media all and (min-width: 750px) {
     .calendar {
         margin-top: 25px;
     }
 }
 
-@media (max-width: 1200px) {
-    
-}
 
 .control-label {
     font-weight: 400;
