--- a/templates/plans.html
+++ b/templates/plans.html
@@ -2,13 +2,13 @@
 {% block body %}
     {% for plan in plans %}
     <div class="row">          
-        <div class="col-md-offset-0 col-md-3">
+        <div class="col-md-offset-1 col-md-3">
             <div class="panel panel-default">
                 <div class="panel-body hero">
                     <div class="post">
-                        <h1>{{plan.name}}</h1>
-                        <h4><a href="{{url_for("view_plan", id=plan.id)}}">Edit</a></h4>
-                        <h4><a href="{{url_for("see_summary", id=plan.id)}}">See summary</a></h4>
+                        <h1 class="plan-name">{{plan.name}}</h1>
+                        <a href="{{url_for("view_plan", id=plan.id)}}" class="btn btn-default edit">Edit plan</a>
+                        <a href="{{url_for("see_summary", id=plan.id)}}" class="btn btn-default see-summary">See summary</a>
                     </div>
                 </div>
             </div>
