--- a/templates/plans.html
+++ b/templates/plans.html
@@ -2,7 +2,7 @@
 {% block body %}
     {% for plan in plans %}
     <div class="row">          
-        <div class="col-md-offset-1 col-md-3">
+        <div class="col-md-offset-1 col-md-3 as">
             <div class="panel panel-default">
                 <div class="panel-body hero">
                     <div class="post">
