--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}">
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
