--- a/templates/summary.html
+++ b/templates/summary.html
@@ -15,6 +15,7 @@
                         <h2 class="time">{{time}}</h2>
                         <h3 class="title">{{activity.activity.title}}</h3>
                     </a>
+                    <h4>{{activity.activity.description}}</h4>
                     <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" class="weather-icon"></a>
                 {% endif%}
             {% endfor %}
