--- a/templates/summary.html
+++ b/templates/summary.html
@@ -11,12 +11,18 @@
             {% for order, time in timeslots.iteritems() %}
                 {% if (timeline.id, order) in activities_by_timeslot %}
                     {% set activity = activities_by_timeslot[(timeline.id, order)] %}
-                    <a href="{{activity.activity.website_url}}" class="plan-activity" style="background-image: url('/static/images/{{activity.activity.photo_url}}')" target="_blank">
-                        <h2 class="time">{{time}}</h2>
-                        <h3 class="title">{{activity.activity.title}}</h3>
-                    </a>
-                    <h4>{{activity.activity.description}}</h4>
-                    <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" class="weather-icon"></a>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <a href="{{activity.activity.website_url}}" class="plan-activity" style="background-image: url('/static/images/{{activity.activity.photo_url}}')" target="_blank">
+                                <h2 class="time">{{time}}</h2>
+                                <h3 class="title">{{activity.activity.title}}</h3>
+                            </a>
+                        </div>
+                        <div class="col-md-9">
+                            <h4>{{activity.activity.description}}</h4>
+                            <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" class="weather-icon"></a>
+                        </div>
+                    </div>
                 {% endif%}
             {% endfor %}
         </div>
