Style summry page so it is like it should be now

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -11,16 +11,18 @@
             {% for order, time in timeslots.iteritems() %}
                 {% if (timeline.id, order) in activities_by_timeslot %}
                     {% set activity = activities_by_timeslot[(timeline.id, order)] %}
-                    <div class="row">
+                    <div class="row activity-summary">
+                                <div class="col-md-1">
+                                    <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" style="height:40px;" class="weather-icon"></a>
+                                </div>
                         <div class="col-md-3">
-                            <a href="{{activity.activity.website_url}}" class="plan-activity" style="background-image: url('/static/images/{{activity.activity.photo_url}}')" target="_blank">
+                                <a href="{{activity.activity.website_url}}" class="plan-activity" style="background-image: url('/static/images/{{activity.activity.photo_url}}')" target="_blank">
                                 <h2 class="time">{{time}}</h2>
                                 <h3 class="title">{{activity.activity.title}}</h3>
-                            </a>
+                                </a>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-8 summary-description">
                             <h4>{{activity.activity.description}}</h4>
-                            <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" class="weather-icon"></a>
                         </div>
                     </div>
                 {% endif%}
