--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,6 +199,7 @@ h2, h3,
     margin: 0px 18px;
 }
 
+
 body.index {
     background: url("/static/background/golden-gate-bridge-reduced.jpg") no-repeat center center fixed; 
     background-size: cover;
@@ -372,3 +373,25 @@ img .google-link {
     margin-top: 35px;
     margin-bottom: 35px;
 }
+
+
+.summary-description {
+    text-align: justify;
+}
+
+
+.activity-summary {
+    margin-bottom: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
