--- a/templates/summary.html
+++ b/templates/summary.html
@@ -15,7 +15,7 @@
                                 <div class="col-md-1">
                                     <table>
                                         <tr><td>
-                                            <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" style="height:40px;" class="weather-icon">
+                                            <a href="{{activity.activity.google_map_url}}" target="_blank"><img class="google-link" src="/static/icons/glyphicons_242_google_maps@2x.png" class="weather-icon">
                                                 <div class="tooltipcontainer">
                                                     <div class="tooltip">Here some info</div>
                                                 </div>
