--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 {% block body %}
     <div class="row">
-            <div class="col-md-6"><img class="portrait" src="/static/images/portret.jpg"></div>
-            <div class="col-md-6 col-md-offset-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
+        <div class="col-md-4 col-md-offset-6
+        col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-6">
+            <h1>Simple San Francisco</h1>
+        </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="row descr-portrait">
+                <div><img class="portrait col-md-2" src="/static/images/portret.jpg"></div>
+                <div class="about-sfo col-md-10">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="all-icons col-md-3 col-md-offset-5
         col-xs-8 col-xs-offset-2">
@@ -16,3 +29,8 @@
         <div>
     </div>
 {% endblock %}
+
+
+
+
+         
