--- a/templates/about.html
+++ b/templates/about.html
@@ -11,8 +11,10 @@
         <div class="col-md-8 col-md-offset-2">
             <div class="row descr-portrait">
                 <div><img class="portrait col-md-2" src="/static/images/portret.jpg"></div>
-                <div class="about-sfo col-md-10">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <div class="about-sfo col-md-10"><p>
+                    &nbsp;&nbsp;&nbsp;&nbspSimpleSanFrancisco.com lets you create your personalized guide which you can easily use during your San Francisco trip. It looks great on all devices and it is also easy to print. I wrote it because I love travelling and my goal was to help another travellers to easly find best activities in city of Golden gate.<br>
+                    &nbsp;&nbsp;&nbsp;&nbspThis web app was my final project at <a class="hackbright" href="http://www.hackbrightacademy.com/" target="_blank">Hackbright Academy</a> - intensive programming course just for women. Currently I am looking for an internship in SF Bay Area. I would love to work on providing better user experience as frontend developer or usability researcher.<br><br>
+                    &nbsp;&nbsp;&nbsp;&nbspBelow you will find my contact information. Feel free to reach me.</p>
                 </div>
             </div>
         </div>
