--- a/templates/plans.html
+++ b/templates/plans.html
@@ -8,7 +8,7 @@
                     <div class="post">
                         <h1 class="plan-name">{{plan.name}}</h1>
                         <a href="{{url_for("view_plan", id=plan.id)}}" class="btn btn-default edit">Edit plan</a>
-                        <a href="{{url_for("see_summary", id=plan.id)}}" class="btn btn-default see-summary">See summary</a>
+                        <a href="{{url_for("see_summary", id=plan.id)}}" class="btn btn-default see-summary">See guide</a>
                     </div>
                 </div>
             </div>
