--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
         <title>Simple San Francisco</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" href="/static/css/style.css" media="screen">
+        <link rel="stylesheet" href="/static/css/print.css" type="text/css" media="print" />
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}">
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
