--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <div class="panel panel-default">
           <div class="panel-body hero">
             <h1>Plan a San Francisco Trip</h1>
-            <h3>Choose only from best activities.</h3>
+            <h3>Create your personalized guide. Use it easily on mobile during your trip.</h3>
             <a href="{{url_for("new_plan")}}" class="btn btn-default btn-lg">Create Your Plan Now!</a>
           </div>
         </div>
