--- a/templates/plan.html
+++ b/templates/plan.html
@@ -2,11 +2,13 @@
 {% block body %}
 <div class="row">
     <div class="col-md-9">
-
         <div class="brand-name">
             <h1>{{plan.name}}</h1>
         </div>
-        <h3>{{plan.start_date|datetime('%B %d')}} to {{plan.end_date|datetime('%B %d, %Y')}}</h3>
+        <div>
+            <h3>{{plan.start_date|datetime('%B %d')}} to {{plan.end_date|datetime('%B %d, %Y')}}</h3>
+            <a href="{{url_for("see_summary", id=plan.id)}}" class="btn btn-default create-plan see-summary-from-plan">See your guide!</a>
+        </div>
     </div>
     <div class="col-md-3">
         <h4>Want to save your plan? Sign up!</h4>
