--- a/templates/summary.html
+++ b/templates/summary.html
@@ -7,8 +7,7 @@
         <button type="submit" class="btn btn-default create-plan send-plan">Copy link and send <br>guide to you friends!</button>
     </div>
 </div>
-
-
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://{{FB_DOMAIN}}{{ url_for("see_guide", hash=plan.hashed_url) }}" data-size="large">Tweet</a>
 {% for timeline, forecast in days %}
 <div class="panel panel-default row">
     <div class="panel-heading panel timeline-panel">
