Facebook button added. Not working on localhost. Not styled yet.

--- a/templates/plan.html
+++ b/templates/plan.html
@@ -10,7 +10,7 @@
             <a href="{{url_for("see_summary", id=plan.id)}}" class="btn btn-default create-plan see-summary-from-plan">See your guide!</a>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 fb-connect">
         <h4>Want to save your plan? Sign up!</h4>
         <fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
     </div>
