--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 {% block body %}
+{% set public_url = "http://" + FB_DOMAIN + url_for("see_guide", hash=plan.hashed_url) %}
+
+
 <div class="row">
     <div class="col-md-7 plan-name-summary"><h1>{{plan.name}}</h1></div>
-    <div class="hashed-link col-md-3"><input class="text-area" type="text" size="30" value="http://{{FB_DOMAIN}}{{ url_for("see_guide", hash=plan.hashed_url) }}" /></div>
+    <div class="hashed-link col-md-3"><input class="text-area" type="text" size="30" value="{{public_url}}" /></div>
     <div class="col-md-2">
         <button type="submit" class="btn btn-default create-plan send-plan">Copy link and send <br>guide to you friends!</button>
     </div>
 </div>
-<a href="https://twitter.com/share" class="twitter-share-button" target="_blank" data-url="http://{{FB_DOMAIN}}{{ url_for("see_guide", hash=plan.hashed_url) }}" data-size="large">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" target="_blank" data-url="{{public_url}}" data-size="large">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 </script>
+<fb:share-button href="http://onet.pl" width="300" type="button_count"></fb:share-button>
 {% for timeline, forecast in days %}
 <div class="panel panel-default row">
     <div class="panel-heading panel timeline-panel">
